# epstein_full

./: .bash_secrets  .coderabbit.yaml  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AGENTS_APPENDIX.md  AI_HANDOFF_TASK.md  ANALYSIS_COMPLETE.md  BULK_INGESTION_STATUS.md  COMPLETE_INGESTION_PLAN.md  CONTEXT.md  DATA_SUMMARY_REPORT.md  DOTFILES_PLAN.md  DUPLICATE_ANALYSIS_REPORT.md  EMBEDDINGS_AUDIT_SUMMARY_2026-04-16.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_DATA_SUMMARY.md  FINAL_INGESTION_REPORT.md  FINANCIAL_DISCLOSURE_PIPELINE_COMPLETE.md  FINISH_INGESTION.sh  IMPLEMENTATION_SUMMARY.txt  IMPORT_REPORT_APRIL_12.md  LICENSE  MISSION_ACCOMPLISHED.md  PROJECT.md  README.md  RULES.md  TASKS.md  TASK_COMPLETION_CHECKLIST.md  VALIDATION_REPORT.md  WINDOWS_GPU_SETUP_PLAN.md  WINDOWS_INTEGRATION_WORKFLOW.md  agents.md  auto_init_agents.py  data_inventory_20260401_114812.json  data_inventory_20260402_190907.json  data_inventory_20260403_010311.json  import_neo4j_graph.py  (+12 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
agents/: AGENTS.md
config/: sentry_config.py
docs/: ARCHITECTURE.md  CAPITOLGAINS_INGESTION_FINAL_REPORT.md  CODE_QUALITY_TOOLS.md  COMPLETE_SETUP_SUMMARY.md  DATA_ACQUISITION.md  DATA_GAPS_AND_REMAINING_WORK.md  DATA_INVENTORY.md  DATA_INVENTORY_FULL.md  DATA_SOURCES.md  EMBEDDING_MIGRATION_PLAN.md  EMBEDDING_STANDARDIZATION_PLAN.md  FILESYSTEM.md  FILE_INVENTORY.md  FILE_LOCATIONS.md  FINAL_COMPREHENSIVE_INGESTION_REPORT.md  FINAL_INGESTION_STATUS.md  FINANCIAL_DISCLOSURES_INGESTION.md  FINANCIAL_DISCLOSURES_SUMMARY.md  GITHUB_NEWS_PROJECTS.md  GOVERNMENT_DATA_ACQUISITION_PLAN.md  GOVERNMENT_DATA_PIPELINE.md  GOVERNMENT_DATA_SOURCES.md  GOV_DATA_INGESTION_SUMMARY.md  HISTORICAL_DATA_EXPANSION_PLAN.md  IMPLEMENTATION_STATUS.md  INGESTION_STATUS_REPORT.md  JMAIL_IMPORT_GUIDE.md  KNOWLEDGE_BASE.md  MASTER_REGISTRY_GUIDE.md  METHODOLOGY.md  NEWS_ALTERNATIVES_RESEARCH.md  NEWS_INGESTION_ANALYSIS.md  OCR_NER_PROCESSING_SUMMARY.md  PAPER.md  PHASE21_NEWS_ACQUISITION_PLAN.md  PHASE22_MEDIA_ACQUISITION.md  PHASE22_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_RECALL_GUIDE.md  (+13 more)
e2e/: example.spec.ts  playwright.config.ts
epstein_capitolgains/: __init__.py  downloaders.py  etl.py  loader.py
media_acquisition/: USAGE.md  __init__.py  base.py  config.py  master.py
migrations/: 001_unified_schema.sql  002_views_and_validation.sql  003_full_schema.sql  004_data_quality_views.sql  005_efta_crosswalk.sql  bootstrap_db.sh  reference_data.sql  schema.sql
processed/: dataset_10_results.json  dataset_11_results.json  dataset_1_results.json  dataset_2_results.json  dataset_3_results.json  dataset_4_results.json  dataset_5_results.json  dataset_6_results.json  dataset_7_results.json  dataset_9_results.json  postgresql_processing_report.json  processing_report.json
scripts/: README.md  SCRIPT_INVENTORY.md  add_gov_datasets_inventory_v2.sql  add_government_datasets_to_inventory.sql  add_verification_memories.py  analyze_duplicates.py  batch_cm_ingest_parallel.py  batch_cn_ingest_parallel.py  batch_fec_ingest.py  batch_fec_ingest_parallel.py  batch_ner_extraction.py  bitwarden_api.py  build_connections.py  check_hf_structure.py  cleanup_data_folders.py  cpu_monitor.py  create_integrity_views.sql  dashboard.py  db_backup.py  (+91 more)
(+359 files in other folders)
